Backtesting: add evaluator/imbalance/profile modules; remove old reports; config updates
.git/COMMIT_EDITMSG [unix] (23:23 17/09/2025)                                                                    4,1 Top"~/solar-pv-simulator/.git/COMMIT_EDITMSG" [unix] 43L, 1473B# Conflicts:

.git/COMMIT_EDITMSG [unix] (23:23 17/09/2025)                                                                    4,1 Top"~/solar-pv-simulator/.git/COMMIT_EDITMSG" [unix] 43L, 1473B# Conflicts:

.git/COMMIT_EDITMSG [unix] (23:23 17/09/2025)                                                                    4,1 Top"~/solar-pv-simulator/.git/COMMIT_EDITMSG" [unix] 43L, 1473B# interactive rebase in progress; onto 9559d43

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ poetry.lock
 ".venv/" 
 ".streamlit/secrets.toml" 
 ".cache.sqlite" 
+".streamlit/secrets.toml" 
+".cache.sqlite" 
+"data/" 
+"*.xlsx" 
+"*.pdf" 
+"components/tmprk0xo13q" 
